kubectl-manifests/ingress-rule-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: <svc-name>
      port:
        number: 80
  tls:
  - hosts:
    - <example.com>
    - <ex.com>
    secretName: tls-secret
  rules:
  - host: <example.com>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <svc-name>
            port:
              number: 80
  - host: <ex.com>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <svc-name>
            port:
              number: 80
